--- a/style.css
+++ b/style.css
@@ -4,19 +4,23 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 .orange-color{
     color: orange;
 }
 h3{
     font-size: 25px;
 }
-section{
+.flexible-content{
     display: flex;
     margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
     padding-left: 4%;
+   
     
 }
 .half-width img{
@@ -31,4 +35,27 @@ section{
     font-weight: 700;
     padding: 10px 20px;
     border-radius: 5px;
+}
+.experience-item{
+    box-shadow: 20px 20px 50px gray;
+    width: 40%;
+    margin-right: 5%;
+    margin-left: 5%;
+    padding-left: 10px;
+    border-radius: 10px;
+    border-left: 5px solid;
+
+}
+#full-stack{
+    border-left: 7px solid;
+  border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+#Baby-Web{
+    border-left: 7px solid;
+    border-image: linear-gradient(orange, red);
+      border-image-slice: 1; 
+}
+footer p{
+    text-align: center;
 }
